--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=inventory
-server.port=8082
+server.port=8081
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=bookstore
+spring.data.mongodb.username=storeUser
+spring.data.mongodb.password=password123
